Add user authentication, add CRUD for trip, add sqlite database
Add models for User/Trip
Add forms for User/Trip
Add picture_hanlder for profile picture for users
Add login/logout/register/update routes for users
Add CRUD create/read/update/delete routes for trip
Add sqlite database
Add migration files

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,14 @@ venv/
 app2.py
 diesel_api/models2.py
 diesel_api/__pycache__/
+diesel_api/trip_calculator/views_blog.py
+diesel_api/trip_calculator/forms_blog.py
+diesel_api/templates/blog_post.html
+diesel_api/templates/create_post.html
 
 /diesel_api/models2.py
 /diesel_api/__pycache__/
+/diesel_api/trip_calculator/views_blog.py
+/diesel_api/trip_calculator/forms_blog.py
+/diesel_api/templates/blog_post.html
+/diesel_api/templates/create_post.html
