--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,15 @@ bin/
 __pycache__/
 venv/
 app2.py
+.idea/
+
 diesel_api/models2.py
 diesel_api/__pycache__/
 diesel_api/trip_calculator/views_blog.py
 diesel_api/trip_calculator/forms_blog.py
 diesel_api/templates/blog_post.html
 diesel_api/templates/create_post.html
+diesel_api/templates/view_blog_post.html
 
 /diesel_api/models2.py
 /diesel_api/__pycache__/
@@ -15,3 +18,4 @@ diesel_api/templates/create_post.html
 /diesel_api/trip_calculator/forms_blog.py
 /diesel_api/templates/blog_post.html
 /diesel_api/templates/create_post.html
+/diesel_api/templates/view_blog_post.html
