Add files, change gitingnore

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,5 @@
-
-diesel_api/models2.py
-diesel_api/__pycache__/
-diesel_api/trip_calculator/views_blog.py
-diesel_api/trip_calculator/forms_blog.py
-diesel_api/templates/blog_post.html
-diesel_api/templates/create_post.html
-diesel_api/templates/view_blog_post.html
-
-data/
-templates/
-static/
+bin/
+__pycache__/
+venv/
+app2.py
+.idea/
